project2/test/test_11712639_08.spl
int test(){
    func(func1(a));
    return 1;
}